package ua.edu.cdu.vu.price.aggregator.telegram.bot;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class PriceAggregatorTelegramBotApplication {

    public static void main(String[] args) {
        SpringApplication.run(PriceAggregatorTelegramBotApplication.class, args);
    }

}
